# dajung-portfolio

./: README.md
imaging-processing/MainWindow/: CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocessing.h
interactive-queue-system/: README.md
lockfree-queue/: README.md
lockfree-queue/02_lockfree-queue/: CMakeLists.txt
lockfree-queue/02_lockfree-queue/core/: lockfreequeue_sptr.hpp
lockfree-queue/02_lockfree-queue/tests/: CMakeLists.txt  unit_lockfree_queue.cpp
place-flow/: README.md
place-flow/demo/: build.gradle
place-flow/demo/src/main/java/com/placeflow/demo/: DemoApplication.java
place-flow/demo/src/main/java/com/placeflow/demo/config/: RedisConfig.java
place-flow/demo/src/main/java/com/placeflow/demo/controller/: OrderController.java  PaymentController.java
place-flow/demo/src/main/java/com/placeflow/demo/domain/: CustomerOrder.java  Payment.java
place-flow/demo/src/main/java/com/placeflow/demo/dto/: ApprovePaymentRequest.java  CreateOrderRequest.java  OrderResponse.java  PaymentResponse.java
place-flow/demo/src/main/java/com/placeflow/demo/exception/: DuplicatePaymentException.java  DuplicateRequestException.java  GlobalExceptionHandler.java  OrderNotFoundException.java
place-flow/demo/src/main/java/com/placeflow/demo/repository/: CustomerOrderRepository.java  PaymentRepository.java
place-flow/demo/src/main/java/com/placeflow/demo/service/: IdempotencyService.java  OrderService.java  PaymentService.java
place-flow/demo/src/main/resources/: application.yml
place-flow/demo/src/test/java/com/placeflow/demo/: DemoApplicationTests.java
play-mate/demo/: build.gradle
play-mate/demo/src/main/java/com/playmate/demo/: DemoApplication.java
play-mate/demo/src/main/java/com/playmate/demo/common/config/: DataInitializer.java  JpaAuditingConfig.java  OpenApiConfig.java
play-mate/demo/src/main/java/com/playmate/demo/common/dto/: HealthResponse.java
play-mate/demo/src/main/java/com/playmate/demo/game/domain/: Game.java
play-mate/demo/src/main/resources/: application-local.yml
play-mate/demo/src/test/java/com/playmate/demo/: DemoApplicationTests.java
satellite-ground-sw/: README.md
satellite-ground-sw/01_overview/: algorithm.md  requirements.md  validation.md
satellite-ground-sw/02_orbit-engine/: CMakeLists.txt
satellite-ground-sw/02_orbit-engine/common/: Definition.h  ReportWriter.cpp  ReportWriter.h
satellite-ground-sw/02_orbit-engine/core/: CoordinateConverter.cpp  CoordinateConverter.h  StateVector.h  Vector3.cpp  Vector3.h
satellite-ground-sw/02_orbit-engine/include/: CollisionAnalyzer.h  Definition.h  OrbitPropagator.h  ReportWriter.h  Scenario.h
satellite-ground-sw/02_orbit-engine/output/: ground_track.csv  ground_track_map.html
satellite-ground-sw/02_orbit-engine/src/: CollisionAnalyzer.h  OrbitPropagator.cpp  OrbitPropagator.h  main.cpp
satellite-ground-sw/02_orbit-engine/tools/: plot_ground_track.py
window-process-manager/: CMakeLists.txt
window-process-manager/include/: Menu.h  ProcessInfo.h  ProcessLauncher.h  ProcessManager.h  ProcessTerminator.h
window-process-manager/src/: ProcessManager.cpp
(+13 files in other folders)
